<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="button_red">RED</string>
    <string name="button_green">GREEN</string>
    <string name="button_blue">BLUE</string>
    <string name="how_to_play">How to play:</string>
    <string name="play_text">Tap the screen and buttons</string>
</resources>
